chore - show docs in dev mode
